--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
   <div class="profile">
 
-    <h1 >My great Portfolio</h1>
+    <h1 >My Portfolio</h1>
     <img src="img/pictureofsebastianbachmann.png" class="profile__porttrait"alt="SebastianBachmannPortrait">
     <p> </p>
             <!--HTML elements can have any number of class names.
