Changed the title of the page
Learn more about Sebastian Bachmann

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>My Portfolio!</title>
+  <title>Portfolio Sebastian Bachmann!</title>
   <link rel="shortcut icon" type="image/svg" href="img/Billards_icon-icons.com_67814.svg">
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -15,7 +15,7 @@
 <body>
   <header class="page-header">
    <!-- Add Logo here -->
-    <img src="img/Logo_SebastianBachmann.png" alt="logo" class="logo">
+    <img src="img/logo.png" alt="logo" class="logo">
     <div class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
@@ -37,52 +37,19 @@
 
 </header>
   <div class="profile">
-
-    <h1 >My Portfolio V2</h1>
     <img src="img/pictureofsebastianbachmann.png" class="profile__porttrait"alt="SebastianBachmannPortrait">
-    <p> </p>
+    <h1 >Hello World</h1>
+    <p> I am going to learn how to build a Website and web applications. </p>
+
             <!--HTML elements can have any number of class names.
             You can even assign multiple class names by separating them with spaces,
             for example: button button__secondary.
             Both the .button as well as the .button__secondary -->
-  <main>
-    <table class="Skillset_table">
-      <caption> Skillset </caption>
-      <thead>
-        <tr>
-          <th>Skills</th>
-          <th>Years of Experience</th>
-          <th>Level of Expertise</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Productmanager</td>
-          <td>8</td>
-          <td>Advanced</td>
-        </tr>
-        <tr>
-          <td>Software devleopment</td>
-          <td>2</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>HTML</td>
-          <td><1</td>
-          <td>Beginner</td>
-        </tr>
-      </table>
-  </main>
-  <p></p>
+
+    <p></p>
   <!-- Link to external page in seperate window by using target-->
-  <h2> Hobbies </h2>
-  <h3> Do you want to see my favorite
-    <a href="https://www.eintracht.de" target= "_blank"> team?</a> </h3>
-
-    <h4> Do you like Eintracht Frankfurt? </h4>
-
-    <button> yes </button>
-    <button class="button__no">no</button>
+  <h2> Do you want to see my favorite
+    <a href="https://www.eintracht.de" target= "_blank"> team?</a> </h2>
 
   </div>
   <p></p>
