--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>My Portfolio!</title>
+  <title>Work Experience Sebastian Bachmann!</title>
   <link rel="shortcut icon" type="image/svg" href="img/Billards_icon-icons.com_67814.svg">
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -15,7 +15,7 @@
 <body>
   <header class="page-header">
    <!-- Add Logo here -->
-    <img src="img/Logo_SebastianBachmann.png" alt="logo" class="logo">
+    <img src="img/logo.png" alt="logo" class="logo">
     <div class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
@@ -40,42 +40,42 @@
         <h1>Work</h1>
         <div class="work__grid">
             <div class="workgrid__item">
-                <h2>Mobile web app</h2>
+                <h2>Gas Purchase application</h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Within this project, I was the Product Owner and responsible for the Prodcut Backlog.
                 </p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="workgrid__item">
-                <h2>Native MacOS application</h2>
+                <h2>Consulting app</h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in JavaFX.
+                    Within this project, I was responsible for the conception of the API requirements.
                 </p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="workgrid__item">
-                <h2>Node.js pdf generation</h2>
+                <h2> Dummy 1 Node.js pdf generation</h2>
                 <p>
                     Within this project, I created a service that generates pdf out of webpages with help of a node.js server.
                 </p>
                 <a href="#">See styleguide</a>
             </div>
             <div class="workgrid__item">
-                <h2>Styleguide for portfolio page</h2>
+                <h2>Dummy 2 Styleguide for portfolio page</h2>
                 <p>
                     Here you can find the styleguide I've created for this portfolio page. It was created with the livingstyleguide gem and grunt.
                 </p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="workgrid__item">
-                <h2>Medium Blog</h2>
+                <h2> Dummy 3 Medium Blog</h2>
                 <p>
                   I am also writing on medium.com about React.js
                 </p>
                 <a href="#">Read my latest blogpost</a>
             </div>
             <div class="workgrid__item">
-                <h2>Your project?</h2>
+                <h2> Dummy 4 Your project?</h2>
                 <p>
                     I can help in realizing front-end and back-end projects with the following technologies: React.js, JavaScript, Java, JavaFX HTML and CSS. I amalso happy to learn other technologies if needed
                 </p>
