Revert "Changed the title of the page"
This reverts commit da1dbd533ee8efeb32b71545072fdc6c14992578.

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Contact Sebastian Bachmann!</title>
+  <title>Contact Sebastian!</title>
   <link rel="shortcut icon" type="image/svg" href="img/Billards_icon-icons.com_67814.svg">
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -15,7 +15,7 @@
 <body>
   <header class="page-header">
    <!-- Add Logo here -->
-    <img src="img/logo.png" alt="logo" class="logo">
+    <img src="img/Logo_SebastianBachmann.png" alt="logo" class="logo">
     <div class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
