Revert "Added new Logo"
This reverts commit f46d1d6f998d0701eb9a3f3aa623aac5367a1f6a.

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
   <header class="page-header">
    <!-- Add Logo here -->
-    <img src="img/Logo_SebastianBachmann.png" alt="logo" class="logo">
+    <img src="img/logo.png" alt="logo" class="logo">
     <div class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
