--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header class="page-header">
    <!-- Add Logo here -->
-    <img src="img/Logo_SebastianBachmann.png" alt="logo" class="logo">
+    <img src="img/logo.png" alt="logo" class="logo">
     <div class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
