Changed the name of the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>My Portfolio!</title>
+  <title>Portfolio Sebastian Bachmann!</title>
   <link rel="shortcut icon" type="image/svg" href="img/Billards_icon-icons.com_67814.svg">
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -79,10 +79,10 @@
   <h3> Do you want to see my favorite
     <a href="https://www.eintracht.de" target= "_blank"> team?</a> </h3>
 
-    <h4> Do you like Eintracht Frankfurt? </h4>
-
-    <button> yes </button>
-    <button class="button__no">no</button>
+    <p></p>
+  <!-- Link to external page in seperate window by using target-->
+  <h2> Do you want to see my favorite
+    <a href="https://www.eintracht.de" target= "_blank"> team?</a> </h2>
 
   </div>
   <p></p>
