Changed the introduction text

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <h1 >My Portfolio</h1>
     <img src="img/pictureofsebastianbachmann.png" class="profile__porttrait"alt="SebastianBachmannPortrait">
     <p> </p>
+    <h1 >Hello World</h1>
+    <p> I am going to learn how to build a Website and web applications. </p>
+
             <!--HTML elements can have any number of class names.
             You can even assign multiple class names by separating them with spaces,
             for example: button button__secondary.
