Revert "Changed the name of the title"
This reverts commit 02f7929c09c9fd2d96897c53f857b7c402f83b6d.

--- a/work.html
+++ b/work.html
@@ -40,42 +40,42 @@
         <h1>Work</h1>
         <div class="work__grid">
             <div class="workgrid__item">
-                <h2>Gas Purchase application</h2>
+                <h2>Mobile web app</h2>
                 <p>
-                    Within this project, I was the Product Owner and responsible for the Prodcut Backlog.
+                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
                 </p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="workgrid__item">
-                <h2>Consulting app</h2>
+                <h2>Native MacOS application</h2>
                 <p>
-                    Within this project, I was responsible for the conception of the API requirements.
+                    Within this project, I was responsible for the frontend. It’s written in JavaFX.
                 </p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="workgrid__item">
-                <h2> Dummy 1 Node.js pdf generation</h2>
+                <h2>Node.js pdf generation</h2>
                 <p>
                     Within this project, I created a service that generates pdf out of webpages with help of a node.js server.
                 </p>
                 <a href="#">See styleguide</a>
             </div>
             <div class="workgrid__item">
-                <h2>Dummy 2 Styleguide for portfolio page</h2>
+                <h2>Styleguide for portfolio page</h2>
                 <p>
                     Here you can find the styleguide I've created for this portfolio page. It was created with the livingstyleguide gem and grunt.
                 </p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="workgrid__item">
-                <h2> Dummy 3 Medium Blog</h2>
+                <h2>Medium Blog</h2>
                 <p>
                   I am also writing on medium.com about React.js
                 </p>
                 <a href="#">Read my latest blogpost</a>
             </div>
             <div class="workgrid__item">
-                <h2> Dummy 4 Your project?</h2>
+                <h2>Your project?</h2>
                 <p>
                     I can help in realizing front-end and back-end projects with the following technologies: React.js, JavaScript, Java, JavaFX HTML and CSS. I amalso happy to learn other technologies if needed
                 </p>
