--- a/about.html
+++ b/about.html
@@ -14,34 +14,35 @@
 <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="page-header">
-   <!-- Add Logo here -->
-    <img src="img/logo.png" alt="logo" class="logo">
-    <div class="page-header__item">
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-         <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-         </li >
-         <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
-         </li>
-         <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-         </li>
-         <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
-         </li>
-        </ul>
-      </nav>
-    </div>
- </header>
-  <main>
-    <div class="mainbody__aboutme">
-      <h1> I am going to learn how to build a proper website </h1>
-      <h2>It will take some time... Therefore take a look at my acutal skills</h2>
-      <p> </p>
+  <div id="page-container">
+    <div id="content-wrap">
+      <header class="page-header">
+        <!-- Add Logo here -->
+        <img src="img/logo.png" alt="logo" class="logo">
+          <div class="page-header__item">
+            <nav class="main-navigation page-header__item">
+              <ul role="menubar" class="navigation-list">
+                <li role="presentation">
+                  <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
+                </li >
+                <li role="presentation">
+                <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
+                </li>
+                <li role="presentation">
+                  <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+                </li>
+                <li role="presentation">
+                  <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+      </header>
       <main>
+        <div class="mainbody__aboutme">
+          <h1> I am going to learn how to build a proper website </h1>
+          <h2>It will take some time... Therefore take a look at my acutal skills</h2>
+          <p> </p>
         <table class="Skillset_table">
           <thead>
             <tr>
@@ -66,14 +67,13 @@
               <td><1</td>
               <td>Beginner</td>
             </tr>
-          </table>
+        </table>
         <p> </p>
         <a href="files/cv.pdf" class="button" download>Download my CV</a>
       </main>
       <p> </p>
     </div>
-  </main>
-  <footer class="page-footer">
+    <footer class="page-footer">
     <p>Find me on</p>
     <div class="social media">
     <!-- Github logo -->
@@ -82,8 +82,8 @@
     <img src="img/iconfinder_square-twitter_317723.svg" alt="twitter">
     <!-- LinkedIn logo -->
     <img src="img/iconfinder_linkedin_570628.png" alt="linkedin">
-    </div>
-  </footer>
+    </footer>
+  </di>
   <script src="js/tota11y.min.js"></script>
 </body>
 </html>
