Code Validation/Error fixing using HTML Linker

--- a/about.html
+++ b/about.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Learn more about me</title>
   <title>Learn more about Sebastian Bachmann </title>
   <link rel="shortcut icon" type="image/svg" href="img/Billards_icon-icons.com_67814.svg">
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
@@ -43,7 +42,7 @@
           <h1> I am going to learn how to build a proper website </h1>
           <h2>It will take some time... Therefore take a look at my acutal skills</h2>
           <p> </p>
-        <table class="Skillset_table">
+          <table class="Skillset_table">
           <thead>
             <tr>
               <th>Skills</th>
@@ -64,26 +63,28 @@
             </tr>
             <tr>
               <td>HTML</td>
-              <td><1</td>
+              <td> less than a year</td>
               <td>Beginner</td>
             </tr>
-        </table>
+          </table>
+        </div>
         <p> </p>
         <a href="files/cv.pdf" class="button" download>Download my CV</a>
       </main>
       <p> </p>
     </div>
     <footer class="page-footer">
-    <p>Find me on</p>
-    <div class="social media">
-    <!-- Github logo -->
-    <img src="img/iconfinder_github_317712.svg" alt="github">
-    <!-- Twitter logo -->
-    <img src="img/iconfinder_square-twitter_317723.svg" alt="twitter">
-    <!-- LinkedIn logo -->
-    <img src="img/iconfinder_linkedin_570628.png" alt="linkedin">
+      <p>Find me on</p>
+      <div class="social media">
+        <!-- Github logo -->
+        <img src="img/iconfinder_github_317712.svg" alt="github">
+        <!-- Twitter logo -->
+        <img src="img/iconfinder_square-twitter_317723.svg" alt="twitter">
+        <!-- LinkedIn logo -->
+        <img src="img/iconfinder_linkedin_570628.png" alt="linkedin">
+      </div>
     </footer>
-  </di>
+  </div>
   <script src="js/tota11y.min.js"></script>
 </body>
 </html>
