--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<!-- IANA Tag for english -->
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Portfolio Sebastian Bachmann!</title>
@@ -38,7 +39,7 @@
           </div>
       </header>
       <div class="profile">
-        <img src="img/pictureofsebastianbachmann.png" class="profile__porttrait"alt="SebastianBachmannPortrait">
+        <img src="img/pictureofsebastianbachmann.png" class="profile__porttrait" alt="SebastianBachmannPortrait">
         <h1 > Hello World </h1>
         <p> I am going to learn how to build a Website and web applications. </p>
 
@@ -56,16 +57,17 @@
     </div>
     <p></p>
     <footer class="page-footer">
-    <p> <span>Find me on</span></p>
-    <div class= social-media!>
+      <p> <span>Find me on</span></p>
+      <div class= social-media!>
     <!-- Github logo -->
-    <img src="img/iconfinder_github_317712.svg" alt="github">
+        <img src="img/iconfinder_github_317712.svg" alt="github">
     <!-- Twitter logo -->
-    <img src="img/iconfinder_square-twitter_317723.svg" alt="twitter">
+        <img src="img/iconfinder_square-twitter_317723.svg" alt="twitter">
     <!-- LinkedIn logo -->
-    <img src="img/iconfinder_linkedin_570628.png" alt="linkedin">
+        <img src="img/iconfinder_linkedin_570628.png" alt="linkedin">
+      </div>
     </footer>
-  <script src="js/tota11y.min.js"></script>
+  <script src="js/tota11y.min.js"> </script>
   </div>
 </body>
 </html>
