--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
             55131 Mainz <br>
             Germany <br>
             <p> </p>
-            E-Mail:<a href="mailto:sebastian.bachmann88@gmail.com">sebastian.bachmann88@gmail.com<a/> <br>
-            Telephone:<a href="tel: +49 015756107527"> call me</a>
+            E-Mail:<a href="mailto:sebastian.bachmann88@gmail.com">sebastian.bachmann88@gmail.com </a>
+            Telephone:<a href="tel:+49015756107527"> call me</a>
           </div>
           <div class="contactgrid__item">
             <div class="Leavea__message"> Or leave me a message </div>
@@ -54,16 +54,16 @@
             <p></p>
           </div>
           <div class="contactgrid__item">
-            <form action="" method="post" id="contact-form">
+            <form action="input" method="post" id="contact-form">
               <label class="standard__label" for="contact-email">Email: </label>
               <input type="email" id="contact-email" required>
               <p></p>
               <label class="standard__label" for= "contact-Telephone">Telephone: </label>
               <input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}" id="contact-Telephone">
               <p></p>
-              <label class="standard__label" for="input Message">Message: </label>
+              <label class="standard__label" for="contact">Message: </label>
               <textarea required maxlength="240" name="Message" rows="4" cols="40"></textarea>
-              <input type="submit"value="Send mesaage">
+              <input type="submit" value="Send mesaage">
             </form>
           </div>
         </div>
@@ -78,6 +78,7 @@
       <img src="img/iconfinder_square-twitter_317723.svg" alt="twitter">
       <!-- LinkedIn logo -->
       <img src="img/iconfinder_linkedin_570628.png" alt="linkedin">
+      </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
   </div>
